<resources>
    <string name="app_name">Course Schedule</string>
    <string name="signup_app_name">Create your account</string>
    <string name="login">Log In</string>
    <string name="button_4">search</string>
    <string name="signup">Sign Up</string>
    <string name="back">Back</string>
    <string name="home">home</string>
    <string name="profile">profile</string>
    <string name="map">map</string>
    <string name="setting">setting</string>
    <string name="username">Username</string>
    <string name="password">password</string>
    <string name="xxx">xxx</string>
    <string name="button">Button</string>
    <string name="className">Class Name</string>
    <string name="location">Location</string>
    <string name="time">Time</string>
    <string name="submit">submit</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="error_weak_password">weak password, 6+ digit password required</string>
    <string name="error_invalid_email">invalid email</string>
    <string name="error_user_exists">user exists</string>
    <string name="schedule">Schedule</string>
    <string name="log_out">Log Out</string>
    <string name="id">ID</string>
    <string name="gender">Gender</string>
    <string name="major">Major</string>
    <string name="update">Update</string>
    <string name="phonenumber">PhoneNumber</string>
    <string name="change_user_name">Change User Name</string>
    <string name="user_info">User Info</string>
    <string name="corner_title">Gator!</string>
</resources>