<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg3"
    tools:context=".SettingActivity">


    <LinearLayout
        android:id="@+id/linearLayout2_setting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:background="@color/btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <Button
            android:id="@+id/btn_home_setting"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/menuText"
            android:text="@string/home" />

        <Button
            android:id="@+id/btn_map_setting"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/menuText"
            android:text="@string/map" />

        <Button
            android:id="@+id/btn_setting_setting"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/menuText"
            android:text="@string/setting" />

        <Button
            android:id="@+id/btn_search_setting"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/menuText"
            android:text="@string/button_4" />

    </LinearLayout>

    <Button
        android:id="@+id/bt_logout_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/log_out"
        android:backgroundTint="@color/btn"
        android:textColor="@color/menuText"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2_setting"
        app:layout_constraintEnd_toEndOf="@+id/bt_update_setting"
        app:layout_constraintStart_toStartOf="@+id/bt_update_setting" />

    <Button
        android:id="@+id/bt_update_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="@string/change_user_name"
        android:backgroundTint="@color/btn"
        android:textColor="@color/menuText"
        app:layout_constraintBottom_toTopOf="@+id/bt_logout_setting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_uid_setting"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="212dp"
        android:minWidth="100dp"
        android:text="@string/xxx"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#151D21"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.369"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_username_setting"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="40dp"
        android:minWidth="100dp"
        android:text="@string/xxx"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#151D21"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/tv_uid_setting"
        app:layout_constraintTop_toBottomOf="@+id/tv_uid_setting" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/user_info"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#6D4C41"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>