<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingUpdateActivity">

    <TextView
        android:id="@+id/tv_username_settingUpdate"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="268dp"
        android:gravity="center_vertical"
        android:minWidth="100dp"
        android:text="@string/username"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_back_settingUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="196dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bt_submit_settingUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toTopOf="@+id/bt_back_settingUpdate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_username_settingUpdate"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="26dp"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minWidth="150dp"
        android:textColorHint="#757575"
        app:layout_constraintStart_toEndOf="@+id/tv_username_settingUpdate"
        app:layout_constraintTop_toTopOf="@+id/tv_username_settingUpdate"
        tools:ignore="DuplicateSpeakableTextCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>